fixed bugs on ie11 and other browsers

--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@
 
 .nav-scroll-script {
   margin-top: -45px;
-  background-color: #5d9bf49a;
+  background-color: rgba(93, 156, 244, 0.604) !important;
   padding-bottom: 5px;
 }
 
@@ -773,7 +773,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 auto;
+  width: 1200px;
+  margin: 0 auto !important;
   max-width: 1200px;
 }
 
@@ -953,6 +954,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 48px;
   margin-bottom: 142px;
 }
