--- a/styles/_gallery.scss
+++ b/styles/_gallery.scss
@@ -33,6 +33,7 @@
         margin: 0 auto;
         display: flex;
         justify-content: center;
+        align-items: center;
         margin-top: 48px;
         margin-bottom: 142px;
     }
