--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -157,7 +157,7 @@
 }
 .nav-scroll-script{
     margin-top: -45px;
-    background-color: #5d9bf49a;
+    background-color: hsla(215, 87%, 66%, 0.604) !important;
     padding-bottom: 5px;
 }
 
